moodle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
        - name: moodle
          image: docker.io/library/moodle-ci-image:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - name: moodle-storage
              mountPath: /var/moodledata
            - name: php-config
              mountPath: /usr/local/etc/php/conf.d/moodle.ini
              subPath: moodle-php.ini
      volumes:
        - name: moodle-storage
          persistentVolumeClaim:
            claimName: moodle-pvc
        - name: php-config
          configMap:
            name: moodle-php-config
