moodle-service.yml
apiVersion: v1
kind: Service
metadata:
  name: moodle-service
spec:
  type: NodePort
  selector:
    app: moodle
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
